--- a/_includes/theme-bio-builtin-2.html
+++ b/_includes/theme-bio-builtin-2.html
@@ -1,7 +1,7 @@
 <div style="margin-top: 10px; margin-bottom: 20px" class="ui stackable grid container">
 
-  <div class="eight wide right aligned column">
-    <a href="https://drive.google.com/file/d/1qdpkEzn-An6aUW-MI4QAYnumsPX5lp88/view?usp=sharing" target="_blank">Download</a>
+  <div class="sixteen wide right aligned column">
+    <a href="https://drive.google.com/file/d/1qdpkEzn-An6aUW-MI4QAYnumsPX5lp88/view?usp=sharing" target="_blank">Download Resume</a>
   </div>
 
   <div class="sixteen wide column no-bottom">
